@@ -1,5 +1,7 @@
 Version history for Perl module Alien::CMake
 
+        - Prefer 64bit cmake on Linux x86_64 (rt#114240)
+
 0.07    02/13/2016
         - Add bin_dir method for Alien::Base compatibility
 
